# basic_ros

./: README.md
src/manipulating_ros_msgs/: CMakeLists.txt  package.xml
src/manipulating_ros_msgs/cfg/: freqConfig.cfg
src/manipulating_ros_msgs/launch/: ros_msgs.launch
src/manipulating_ros_msgs/src/: freq_publisher.cpp  listener.cpp  main.cpp  test.cpp
